Add forth_of_july config

--- a/app.cfg.example
+++ b/app.cfg.example
@@ -30,7 +30,7 @@ RRD_INTERVAL=60
 
 # SPI Driver for bibliopixel
 LED_TYPE='APA102'
-CHANNEL_ORDER='RGB'
+CHANNEL_ORDER='BGR'
 LED_COUNT=8
 
 STARTING_VOLUME=80
