--- a/app.cfg.example
+++ b/app.cfg.example
@@ -17,7 +17,7 @@ DB_PATH='auth.db'
 # GPIO Pin for the door switch
 DOOR_SWITCH=26
 
-DOOR_SONG='01_-_Reading_Rainbow_Theme_Song.mp3'
+DOOR_SONG='Reading Rainbow Theme Song'
 
 # ADS pins for voltage monitoring
 PANEL_PIN=-1
